Fix no sidebar layout spacing

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -2,7 +2,6 @@ $gold: #ffb310;
 
 body.menu-colors #content-area {
   font-family: Arial,Helvetica,sans-serif;
-  margin-left: 36px;
   padding: 17px 30px 0 30px;
 }
 body.menu-colors, body.menu-colors #content-area {
@@ -254,7 +253,7 @@ body.node-type-fixed-width-secondary-page #sidebar-left, body.node-type-fluid-wi
 
 body.node-type-fixed-width-secondary-page #content-inner, body.node-type-fluid-width-secondary-page #content-inner,
 body.node-type-fixed-width-secondary-page #content-inner #content-header { 
-  padding-left: 163px;
+  padding-left: 0px;
 }
 
 /* Sidebar right: use sidebar-left */
